# Freckles-Casino

./: .gitignore  CMakeLists.txt  shell-emcc.bat  shell-win32.bat
game/: CMakeLists.txt
game/assets/textures/Gimp-Files/: background.xcf  blank.xcf  border.xcf  card-slot-texture.xcf  freckles-gameplay-level-final-1.xcf  freckles-gameplay-level-final-2.xcf  freckles-gameplay.xcf  freckles-idle-stress-level-2.xcf  freckles-idle-stress-level-3.xcf  freckles-idle-stress-talk-level-1.xcf  freckles-idle-stress-talk-level-2.xcf  freckles-idle-stress-talk-level-3.xcf  freckles-idle-stress.xcf  freckles-idle-talk-level-final.xcf  freckles-idle.xcf  freckles-lose.xcf  green-table.xcf  red-curtain.xcf  title-screen-animation.xcf
game/src/: ai-behavior.c  ai-behavior.cpp  buffer.c  build-osx.sh  build-profile.bat  build-web.bat  build-win32.bat  build.bat  commands.c  debug.bat  game-screen.c  game-screen.cpp  gui.c  input.c  input.cpp  main.c  main.cpp  poker.c  poker.cpp  release-build.bat  scene.c  sound.c  sound.cpp  sprite-animation.c  sprite-animation.cpp
game/src/include/: raymath.h
game/src/include/FC/: ai-behavior.h  buffer.h  character-state.h  commands.h  defines.h  entities.h  font-info.h  game-screen.h  gui.h  input.h  poker.h  scene.h  sound.h  sprite-animation.h
game/src/libs/raylib/: CMakeLists.txt
game/src/libs/win32/msvc/: glfw3.lib  raylib_static.lib
game/tests/: CMakeLists.txt  poker-tests.cpp
tests/: CMakeLists.txt  poker-tests.cpp
